tests/paczka1/small_fuzzy/29350542.err
Error in line 2: pPJCOh39 S930 38,0
Error in line 11: pPJCOh39 A302 98,7
Error in line 9: F2FXilpZu6 S930 68,8
Error in line 4: Fkf A760 26,2
